# models/user.go
@@ -1,0 +1,22 @@
+package models
+
+import "go.mongodb.org/mongo-driver/bson/primitive"
+
+type User struct {
+	ID       primitive.ObjectID `json:"_id,omitempty" bson:"_id,omitempty"`
+	Name     string             `json:"name" bson:"name" binding:"required"`
+	Email    string             `json:"email" bson:"email" binding:"required,email"`
+	Password string             `json:"password,omitempty" bson:"password" binding:"required,min=6"`
+	Role     string             `json:"role" bson:"role"`
+}
+
+type RegisterInput struct {
+	Name     string `json:"name" binding:"required"`
+	Email    string `json:"email" binding:"required,email"`
+	Password string `json:"password" binding:"required,min=6"`
+}
+
+type LoginInput struct {
+	Email    string `json:"email" binding:"required,email"`
+	Password string `json:"password" binding:"required"`
+}
