# routes/routes.go
@@ -2,6 +2,7 @@ package routes
 
 import (
 	"MovieAPI/handlers"
+	"MovieAPI/middleware"
 
 	"github.com/gin-gonic/gin"
 )
@@ -11,12 +12,22 @@ func SetupRouter() *gin.Engine {
 
 	api := r.Group("/api")
 	{
-		api.GET("/movies", handlers.GetMovies)
-		api.GET("/movies/:id", handlers.GetMovieByID)
-		api.POST("/movies", handlers.CreateMovie)
-		api.PUT("/movies/:id", handlers.UpdateMovie)
-		api.DELETE("/movies/:id", handlers.DeleteMovie)
-		api.POST("/movies/:id/poster", handlers.UploadPoster)
+		auth := api.Group("/auth")
+		{
+			auth.POST("/login", handlers.Login)
+			auth.POST("/register", handlers.Register)
+		}
+
+		movies := api.Group("/movies")
+		{
+			movies.GET("", handlers.GetMovies)
+			movies.GET("/:id", handlers.GetMovieByID)
+
+			movies.POST("", middleware.AuthRequired(), handlers.CreateMovie)
+			movies.PUT("/:id", middleware.AuthRequired(), handlers.UpdateMovie)
+			movies.DELETE("/:id", middleware.AuthRequired(), middleware.AdminOnly(), handlers.DeleteMovie)
+			movies.POST("/:id/poster", middleware.AuthRequired(), handlers.UploadPoster)
+		}
 	}
 
 	return r
